# langchain-websocket

./: .dockerignore  .env.dist  Caddyfile  Dockerfile  LICENSE  README.md  docker-compose.yml  fe.html  justfile  main.py  models.py  pyproject.toml
apps/backend/: .dockerignore  Dockerfile  agent.py  config.py  main.py  pyproject.toml
apps/backend/tests/: conftest.py  test_agent_flow.py  test_errors.py  test_health.py  test_memory.py  test_models.py  test_streaming.py  test_timeout.py  test_tool_calls.py  test_websocket.py
apps/frontend/: .env.example
apps/frontend/src/: App.css  App.jsx  index.css
apps/frontend/src/components/: AgentMessage.jsx  ChatInput.jsx  ChatMessage.jsx
apps/frontend/src/hooks/: useAgentWebSocket.js  useWebSocket.js
apps/frontend/src/pages/: AgentChat.jsx
docker/: Caddyfile  docker-compose.yml
hurl/: health-docker.hurl  health-local.hurl
