[project]
name = "langchain-websocket"
version = "0.1.0"
description = "Demo of using langchain event streaming in a Starlette Websocket App"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=4.0.0",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.32",
    "langgraph-checkpoint-postgres>=2.0.24",
    "langgraph>=0.6.8",
    "pydantic-settings>=2.11.0",
    "starlette>=0.47.3",
    "uvicorn>=0.35.0",
    "websockets>=15.0.1",
    "psycopg[binary,pool]>=3.2.10",
]

[dependency-groups]
dev = [
    "ruff>=0.12.12",
]
test = [
    "pytest-asyncio>=1.2.0",
    "pytest>=8.4.2",
    "httpx>=0.28.1",
    "pytest-mock>=3.15.1",
    "pytest-xdist>=3.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.pyright]
exclude = [
    '__pycache__',
    '.venv',
    '.ruff_cache',
]

[tool.ruff]
line-length=100

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
